--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,37 +1,40 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
-
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-  
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />
+    <script src="{% static 'js/notification-close.js' %}"></script>
+    {% if form.errors %}
+        <div class="notification is-danger">
+            <button class="delete"></button>
+           Your username and password didn't match. Please try again.
+        </div>
     {% endif %}
-  {% endif %}
-  
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
-  
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-  
+    <section class="hero is-fullheight">
+        <div class="hero-body">
+            <div class="container">
+                <div class="columns is-centered has-text-centered ">
+                    <form class="box " method="post" action="{% url 'login' %}">
+                        {% csrf_token %}
+                        <div class="field login-field">
+                            <input name="username" class="input has-text-centered " type="text" placeholder="Email">
+                        </div>
+                        <div class="field login-field">
+                            <input name="password" class="input has-text-centered" type="password" placeholder="Password">
+                        </div>
+                        <div class="field login-field">
+                            <p class="control  has-text-centered ">
+                                <input class="button is-success" type="submit" value="login" />
+                            </p>
+                        </div>
+                        <input type="hidden" name="next" value="{{ next }}" />
+                        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+
+                    </form>
+                    {# Assumes you setup the password_reset view in your URLconf #}
+                    <!-- Add content or other tiles -->
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
