--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <meta charset="utf-8">
-    <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+    <title>{% block title %}Ethicloud backoffice{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/superhero/bulmaswatch.min.css">
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
 </head>
 <body>
 <main>
