--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,69 @@
 
 
 {% if user.is_authenticated %}
-    User: {{ user.get_username }}
-    <a href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+  
+{% load static %}
+  <script src="{% static 'js/navbar-menu.js' %}"></script>
+  <nav class="navbar animated slideInDown" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <!--<a class="navbar-item" href="https://bulma.io">
+      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+    </a>-->
+    <p class="navbar-item">
+      Ethicloud
+    </p>
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
 
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item">
+        {{ user.get_username }}
+      </a>
+      <!--
+      <a class="navbar-item">
+        Documentation
+      </a>
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">
+          More
+        </a>
+
+        <div class="navbar-dropdown">
+          <a class="navbar-item">
+            About
+          </a>
+          <a class="navbar-item">
+            Jobs
+          </a>
+          <a class="navbar-item">
+            Contact
+          </a>
+          <hr class="navbar-divider">
+          <a class="navbar-item">
+            Report an issue
+          </a>
+        </div>
+      </div>-->
+    </div>
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <!--<a class="button is-primary">
+            <strong>Sign up</strong>
+          </a>-->
+          <a class="button is-danger" href="{% url 'logout'%}?next={{request.path}}">
+            Log out
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </nav>
 {% else %}
     <a href="{% url 'login'%}?next={{request.path}}">Login</a>
 {% endif %}
