--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -11,7 +11,7 @@
     {% endif %}
     <section class="hero is-fullheight">
         <div class="hero-body">
-            <div class="container">
+            <div class="container animated fadeIn">
                 <div class="columns is-centered has-text-centered ">
                     <form class="box " method="post" action="{% url 'login' %}">
                         {% csrf_token %}
